# randstream

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: throughput.rs
src/: cli.rs  generate.rs  lib.rs  main.rs  validate.rs
tests/: cli.rs
xtask/: Cargo.toml
