[package]
name = "randstream"
version.workspace = true
edition = "2024"
authors = ["Gaëtan Lehmann <gaetan.lehmann@vates.tech>"]
description = "Reproducible Random Stream Generator and Validator"
readme = "README.md"
repository = "https://github.com/xcp-ng/randstream.git"
homepage = "https://github.com/xcp-ng/randstream/"
documentation = "https://github.com/xcp-ng/randstream/"
license = "MIT"
keywords = ["random", "performance", "stream"]

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.4.1"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "3.0.4"
crc32fast = "1.5.0"
human-units = "0.5.3"
indicatif = "0.18.4"
itertools = "0.14.0"
log = "0.4.29"
nix = { version = "0.31.1", features = ["ioctl"] }
num_cpus = "1.17.0"
ocli = "0.3.0"
parse-size = "1.1.0"
rand = "0.9.2"
rand_pcg = "0.9.0"
supports-unicode = "3.0.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
