[package]
name = "xtask"
version.workspace = true
edition = "2024"
authors = ["Gaëtan Lehmann <gaetan.lehmann@vates.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env", "wrap_help"] }
toml_edit = "0.22.27"
xshell = "0.2"
